# HengHeng888

./: .gitignore  .vercelignore  ALL-MIGRATIONS.sql  BUILD-LOCAL.md  CHECK-BEFORE-PUSH.md  CLEAR-CACHE.md  CLEAR-CREDENTIALS.ps1  CREATE-CONNECTION-STRING.md  DEPLOY.md  DEPLOYMENT.md  FIND-CONNECTION-STRING.md  FIX-AUTH.md  FIX-REGISTRATION.md  HOW-TO-FIND-DATABASE-URL.md  HOW-TO-RUN-MIGRATIONS.md  PRISMA-VS-SUPABASE-AUTH.md  PUSH-NOW.md  PUSH-SIMPLE.md  README.md  RUN-MIGRATIONS-SIMPLE.md  RUN-MIGRATIONS.md  SETUP-GIT.md  SUPABASE-SETUP.md  VERCEL-FREE-VS-PRO.md  VERCEL-SETUP.md  WHY-VERCEL-HARD.md  build-local.ps1  next.config.ts  package-lock.json  package.json  push-to-github.ps1  vercel.json
prisma/: schema.prisma
public/app/: .gitignore  INSTALL.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  docker-compose.yml  install-postgres-native.ps1  restart-backend.ps1  run-migration.ps1  setup-database.ps1  setup-full.ps1  start-backend.ps1  start-frontend.ps1
public/app/backend/: Cargo.toml
public/app/backend/migrations/: 001_initial_schema.sql
public/app/backend/src/: main.rs
public/app/backend/src/database/: mod.rs
public/app/backend/src/handlers/: admin.rs  banners.rs  categories.rs  mod.rs  products.rs
public/app/backend/src/models/: banner.rs  category.rs  mod.rs  product.rs
public/app/backend/src/routes/: mod.rs
src/: middleware.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: ConditionalLayout.tsx  ConsoleSuppress.tsx  Footer.tsx  NavBarComponents.tsx  SearchNav.tsx
src/lib/: api-client.ts  (+14 more)
(+197 files in other folders)
